# omoios-cascade

./: .gitignore  .harness-checkpoint.json  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml  stress_test.py  test_api.py  test_planner_call.py
.github/workflows/: ci.yml
.harness/: snapshots.db
agents/: __init__.py  s01_agent_loop.py  s02_multi_tool.py  s03_structured_planning.py  s04_context_isolation.py  s05_knowledge_loading.py  s06_compression.py  s07_file_tasks.py  s08_background.py  s09_team_messaging.py  s10_team_protocols.py  s11_autonomous.py  s12_structured_handoffs.py  s13_scratchpad_rewriting.py  s14_planner_worker_split.py  s15_worker_isolation.py  s16_optimistic_merge.py  s17_recursive_hierarchy.py  s18_error_tolerance.py  s19_failure_modes.py  s20_reconciliation.py  s_full.py
docs/: s01-the-agent-loop.md  s02-multi-tool-dispatch.md  s03-structured-planning.md  s04-context-isolation.md  s05-knowledge-loading.md  s06-context-compression.md  s07-file-based-tasks.md  s08-background-execution.md  s09-team-messaging.md  s10-team-protocols.md  s11-autonomous-agent.md  s12-structured-handoffs.md  s13-scratchpad-rewriting.md  s14-planner-worker-split.md  s15-worker-isolation.md  s16-optimistic-merge.md  s17-recursive-hierarchy.md  s18-error-tolerance.md  s19-failure-modes.md  s20-reconciliation-pass.md  test-queries.md
docs/architecture/: acp-integration-design.md  async-pyo3-migration.md  cloudflare-sandbox-design.md  (+7 more)
src/harness_core/: Cargo.toml  pyproject.toml
src/harness_core/src/: aho.rs  diff.rs  glob.rs  grep.rs  hash.rs  json_ops.rs  lib.rs  read.rs  shell.rs  snapshot.rs
stress_tests/: __init__.py  mega1_project_management.py  mega2_game_engine.py  mega3_programming_language.py  mega4_social_platform.py  mega5_operating_system.py  mega6_harness_clone.py  run_all.py  runner_helpers.py  scaffold.py  tier10_text_browser.py  tier1_single_feature.py  tier2_multi_feature.py  tier3_new_module.py  tier4_refactor_extend.py  tier5_mini_browser.py  tier6_rest_api.py  tier7_plugin_system.py  tier8_static_site_gen.py  tier9_micro_framework.py
web/: package-lock.json  package.json
(+230 files in other folders)
