[project]
name = "harness"
version = "0.1.0"
description = "Learn how modern AI agents work by building one from scratch"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

dependencies = [
    "anthropic>=0.25.0",
    "instructor>=1.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
asyncio_mode = "auto"
