[package]
name = "harness_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "harness_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
walkdir = "2.5"
rayon = "1.10"
md-5 = "0.10"
ignore = "0.4"
globset = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aho-corasick = "1.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
