[project]
name = "harness-core"
version = "0.1.0"
description = "Rust-accelerated hot-path operations for the harness package"
requires-python = ">=3.11"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "harness_core"
features = ["pyo3/extension-module"]
